[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/anemy/runner/blow up/blow up10.png" type="Texture" id=1]
[ext_resource path="res://art/anemy/runner/blow up/blow up5.png" type="Texture" id=2]
[ext_resource path="res://art/anemy/runner/blow up/blow up1.png" type="Texture" id=3]
[ext_resource path="res://art/anemy/runner/run/run4.png" type="Texture" id=4]
[ext_resource path="res://art/anemy/runner/blow up/blow up9.png" type="Texture" id=5]
[ext_resource path="res://art/anemy/runner/blow up/blow up11.png" type="Texture" id=6]
[ext_resource path="res://art/anemy/runner/blow up/blow up4.png" type="Texture" id=7]
[ext_resource path="res://art/anemy/runner/blow up/blow up8.png" type="Texture" id=8]
[ext_resource path="res://art/anemy/runner/run/run3.png" type="Texture" id=9]
[ext_resource path="res://art/anemy/runner/blow up/blow up2.png" type="Texture" id=10]
[ext_resource path="res://art/anemy/runner/blow up/blow up7.png" type="Texture" id=11]
[ext_resource path="res://art/anemy/runner/blow up/blow up6.png" type="Texture" id=12]
[ext_resource path="res://art/anemy/runner/blow up/blow up3.png" type="Texture" id=13]
[ext_resource path="res://art/anemy/runner/run/run2.png" type="Texture" id=14]
[ext_resource path="res://art/anemy/runner/run/run1.png" type="Texture" id=15]
[ext_resource path="res://runner.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "active",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.54285, 7.06214 )

[sub_resource type="CircleShape2D" id=3]
radius = 196.084

[node name="runner" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 37
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.99445 )
shape = SubResource( 2 )

[node name="blowup" type="Timer" parent="."]
wait_time = 2.0

[node name="delete" type="Timer" parent="."]
wait_time = 0.5

[node name="seecoll" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seecoll"]
visible = false
shape = SubResource( 3 )

[connection signal="timeout" from="blowup" to="." method="_on_blowup_timeout"]
[connection signal="timeout" from="delete" to="." method="_on_delete_timeout"]
[connection signal="body_entered" from="seecoll" to="." method="_on_seecoll_body_entered"]
